# ToyOS

./: .gitignore  README.md
32_bit_protected_mode_tutorial/: 32bit-main.nasm
boot_sector_tutorial/: boot_sect_disk_load.nasm  boot_sect_hello.nasm  boot_sect_main.nasm  boot_sect_memory.nasm  boot_sect_memory_org.nasm  boot_sect_segmentation.nasm  boot_sect_simple.nasm  boot_sect_stack.nasm
c_basics/: README.md  function.c  functioncalls.c  pointers.c
kernel_barebones/: Makefile  bootsect.nasm  kernel.c
kernel_barebones_tutorial/: bootsect.nasm  kernel_entry.nasm
os/: Makefile
os-cmake/: CMakeLists.txt
os-cmake/boot/: 32bit-gdt.nasm  32bit-switch.nasm  CMakeLists.txt  boot_sect_disk_load.nasm  boot_sect_print.nasm  bootsect.nasm
os-cmake/cmake/: utils.cmake
os-cmake/drivers/: CMakeLists.txt  basic_screen.c
os-cmake/include/drivers/: basic_io_ports.h  basic_screen.h
os-cmake/kernel/: CMakeLists.txt  kernel.c
os-cmake/src/: CMakeLists.txt
os-cmake/src/boot/: CMakeLists.txt  boot_sect_print_hex.nasm
os-cmake/src/drivers/: CMakeLists.txt  basic_io_ports.c  basic_screen.c
os-cmake/src/kernel/: CMakeLists.txt  kernel.c
os/boot/: 32bit-print.nasm  bootsect.nasm
os/drivers/: basic_io_ports.c  basic_io_ports.h  basic_screen.c
os/kernel/: kernel.c
